@@ -520,7 +520,7 @@ References:
 	
 	
 	/*!
-	 * contentloaded.js
+	 * ContentLoaded.js by Diego Perini, modified for IE<9 only (to save space)
 	 *
 	 * Author: Diego Perini (diego.perini at gmail.com)
 	 * Summary: cross-browser wrapper for DOMContentLoaded
@@ -539,16 +539,11 @@ References:
 	function ContentLoaded(win, fn) {
 
 		var done = false, top = true,
-
 		doc = win.document, root = doc.documentElement,
-
-		add = doc.addEventListener ? 'addEventListener' : 'attachEvent',
-		rem = doc.addEventListener ? 'removeEventListener' : 'detachEvent',
-		pre = doc.addEventListener ? '' : 'on',
 
 		init = function(e) {
 			if (e.type == 'readystatechange' && doc.readyState != 'complete') return;
-			(e.type == 'load' ? win : doc)[rem](pre + e.type, init, false);
+			(e.type == 'load' ? win : doc).detachEvent("on" + e.type, init, false);
 			if (!done && (done = true)) fn.call(win, e.type || e);
 		},
 
@@ -563,9 +558,8 @@ References:
 				try { top = !win.frameElement; } catch(e) { }
 				if (top) poll();
 			}
-			doc[add](pre + 'DOMContentLoaded', init, false);
-			doc[add](pre + 'readystatechange', init, false);
-			win[add](pre + 'load', init, false);
+			doc.attachEvent('onreadystatechange', init, false);
+			win.attachEvent('onload', init, false);
 		}
 	};
 })(this);
