@@ -8,6 +8,7 @@
 		// selector engines available for testing.
 		var engines = {
 			"NWMatcher": {
+				"EDGE": "https://github.com/dperini/nwmatcher/raw/master/src/nwmatcher.js",
 				"1.2.3": "http://nwevents.googlecode.com/files/nwmatcher-1.2.3-min.js",
 				"1.2.2": "http://nwevents.googlecode.com/files/nwmatcher-1.2.2-min.js"
 			},
